# sigmazero

./: Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: CONDITION_OPERATORS.md  FIELD_MODIFIERS.md
examples/correlation_rules/: account_compromise.yml  apt_attack_chain.yml  brute_force_ssh.yml  cryptomining_detection.yml  data_exfiltration.yml  insider_threat.yml  mass_file_deletion.yml  network_reconnaissance.yml  privilege_escalation_chain.yml  ransomware_detection.yml  web_attack_chain.yml
examples/logs/: account_compromise.json  all_correlations_test.json  apt_attack_chain.json  critical_security_events.json  crypto_mining.json  data_exfiltration.json  insinder_threat.json  mass_file_deletion.json  mixed_traffic.json  modifier_test_logs.json  security_events.json  ssh_brute_force_scenario.json  ssh_brute_force_test.json
examples/rules/: admin_account_usage.yml  after_hours_access.yml  apt_activity.yml  complex_condition.yml  credential_dumping.yml  credential_dumping_mimikatz.yml  data_staging_temp_folder.yml  exploit_attempt.yml  field_modifiers.yml  file_deletion.yml  high_cpu_process.yml  large_outbound_transfer.yml  mass_file_modification.yml  mining_binary_execution.yml  mining_pool_connection.yml  modifiers_all.yml  modifiers_base64.yml  modifiers_comparison.yml  modifiers_endswith.yml  modifiers_regex.yml  modifiers_startswith.yml  multiple_failed_logins.yml  not_condition.yml  numeric_comparison.yml  one_of_pattern.yml  port_scan_detected.yml  privilege_escalation.yml  psexec_lateral_movement.yml  ransomware_note.yml  sensitive_file_access_bulk.yml  sensitive_financial_data_access.yml  sql_injection_attempt.yml  ssh_failed_auth.yml  successful_login_unusual_location.yml  suspicious_file_extension.yml  suspicious_network.yml  suspicious_powershell_encoded.yml  suspicious_process.yml  suspicious_web_request.yml  unauthorized_data_access.yml  (+5 more)
scripts/: benchmark.sh  build.sh  generate_logs.sh  test.sh
src/: correlation.rs  correlation_parser.rs  engine.rs  engine_tests.rs  integration_tests.rs  lib.rs  models.rs  models_tests.rs  parser.rs  parser_tests.rs
