[package]
name = "sigma-zero"
version = "0.2.0"
edition = "2021"

[lib]
name = "sigma_zero"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "sigma-zero"
path = "bin/cli.rs"

[[bin]]
name = "sigma-zero-streaming"
path = "bin/cli_streaming.rs"

[[bin]]
name = "sigma-generate-logs"
path = "bin/generate_logs.rs"

[dependencies]
# JSON parsing for logs and rules
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
# Regular expressions for pattern matching
regex = "1.10"
# Base64 encoding/decoding
base64 = "0.21"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# For streaming large files
futures = "0.3"
# For IP address parsing
ipnetwork = "0.20"
# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
# For efficient string matching
aho-corasick = "1.1"
# For timestamps
chrono = "0.4"
# For random generation
rand = "0.8"

# Async runtime for parallel processing
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.40", features = ["full"] }
rayon = { version = "1.10" }
clap = { version = "4.5", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1", default-features = false, features = ["sync", "macros"] }
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dev-dependencies]
tempfile = "3.8"
